added gitignore for cleaner repo

--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,25 @@
-# Logs
-logs
-*.log
+# === Node.js Dependencies ===
+node_modules/
+dist/
+.cache/
+
+# === Vite Build ===
+.vite/
+
+# === Logs ===
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
 
-node_modules
-dist
-dist-ssr
-*.local
-
-# Editor directories and files
-.vscode/*
-!.vscode/extensions.json
-.idea
+# === OS Files ===
 .DS_Store
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
+Thumbs.db
+
+# === IDE Files ===
+.vscode/
+.idea/
+
+# === Environment Files ===
+.env
+.env.local
+.env.*.local
